--- a/env.example
+++ b/env.example
@@ -1,194 +1,242 @@
 # DomMate Environment Configuration
-# Copy this file to .env and update the values according to your setup
+# Copy this file to .env and modify the values according to your setup
 
-# ===========================
-# Server Configuration
-# ===========================
-
-# Backend server port (default: 3001)
-SERVER_PORT=3001
-
-# Frontend development server port (default: 4322)
-CLIENT_PORT=4322
-
-# Node.js environment (development/production/test)
-NODE_ENV=production
-
-# ===========================
-# Database Configuration
-# ===========================
+# =================================================================
+# DATABASE CONFIGURATION
+# =================================================================
 
 # SQLite database file path (relative to project root)
-DATABASE_PATH=./data/domains.db
-
-# Enable database debugging logs (true/false)
-DATABASE_DEBUG=false
+DATABASE_PATH=./domains.db
 
 # Database backup directory
-DATABASE_BACKUP_DIR=./data/backups
+BACKUP_DIR=./backups
 
-# ===========================
-# Security Configuration
-# ===========================
+# =================================================================
+# SERVER CONFIGURATION
+# =================================================================
+
+# Backend API server port
+SERVER_PORT=3001
+
+# Frontend development server port
+CLIENT_PORT=4322
+
+# Server host binding (use 0.0.0.0 for Docker)
+SERVER_HOST=localhost
+
+# Environment mode: development, production, test
+NODE_ENV=development
+
+# =================================================================
+# SECURITY CONFIGURATION
+# =================================================================
 
 # JWT secret key for token signing (generate a strong random string)
-# Use: openssl rand -base64 32
-JWT_SECRET=your-super-secure-jwt-secret-key-here
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# Session secret key for cookie signing (generate a strong random string)
-# Use: openssl rand -base64 32
-SESSION_SECRET=your-super-secure-session-secret-key-here
+# Session secret for cookie signing (generate a strong random string)
+SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 
-# Session timeout in minutes (default: 60 minutes)
-SESSION_TIMEOUT=60
+# Session timeout in milliseconds (24 hours = 86400000)
+SESSION_TIMEOUT=86400000
 
-# Maximum login attempts before requiring CAPTCHA (default: 3)
-MAX_LOGIN_ATTEMPTS=3
+# Maximum failed login attempts before CAPTCHA is required
+MAX_LOGIN_ATTEMPTS=5
 
-# Login attempt window in minutes (default: 15 minutes)
+# Login attempt window in minutes
 LOGIN_ATTEMPT_WINDOW=15
 
-# ===========================
-# Email Configuration (SMTP)
-# ===========================
+# Default admin password (change immediately after first login)
+DEFAULT_ADMIN_PASSWORD=admin123
 
-# SMTP server hostname
-SMTP_HOST=smtp.example.com
+# =================================================================
+# EMAIL CONFIGURATION (SMTP)
+# =================================================================
 
-# SMTP server port (587 for TLS, 465 for SSL, 25 for plain)
+# Enable email notifications (true/false)
+EMAIL_ENABLED=false
+
+# SMTP hostname
+SMTP_HOST=smtp.gmail.com
+
+# SMTP port (587 for TLS, 465 for SSL, 25 for unencrypted)
 SMTP_PORT=587
 
-# Use TLS encryption (true/false)
+# Enable TLS/STARTTLS (true/false)
 SMTP_SECURE=false
 
-# SMTP authentication username (usually your email address)
-SMTP_USER=your-email@example.com
+# SMTP authentication username
+SMTP_USER=your-email@gmail.com
 
-# SMTP authentication password or app password
-SMTP_PASS=your-email-password
+# SMTP authentication password or app-specific password
+SMTP_PASS=your-app-password
 
-# Default sender name for notifications
-SMTP_FROM_NAME=DomMate Notifications
+# Email sender name
+EMAIL_FROM_NAME=DomMate Notification System
 
-# Default sender email address
-SMTP_FROM_EMAIL=noreply@dommate.com
+# Email sender address
+EMAIL_FROM_ADDRESS=noreply@dommate.com
 
-# ===========================
-# Domain Monitoring Configuration
-# ===========================
+# Default email template language (en/zh)
+EMAIL_DEFAULT_LANGUAGE=en
 
-# Default domain check interval in hours (default: 24)
-DEFAULT_CHECK_INTERVAL=24
+# =================================================================
+# DOMAIN CHECKING CONFIGURATION
+# =================================================================
 
-# Days before expiration to show warnings (comma-separated)
-EXPIRY_WARNING_DAYS=30,7,1
+# Domain check interval in hours (default: 24 hours)
+DOMAIN_CHECK_INTERVAL=24
 
-# Maximum number of domains per user (0 = unlimited)
-MAX_DOMAINS_PER_USER=0
+# WHOIS request timeout in milliseconds
+WHOIS_TIMEOUT=10000
 
-# Enable automatic WHOIS refresh (true/false)
-AUTO_WHOIS_REFRESH=true
+# Maximum concurrent domain checks
+MAX_CONCURRENT_CHECKS=10
 
-# WHOIS refresh interval in hours (default: 168 = 7 days)
-WHOIS_REFRESH_INTERVAL=168
+# Domain expiration warning days (comma-separated)
+EXPIRATION_WARNING_DAYS=30,15,7,3,1
 
-# ===========================
-# Export and Backup Configuration
-# ===========================
+# =================================================================
+# NOTIFICATION CONFIGURATION
+# =================================================================
 
-# Directory for exported files
-EXPORT_DIR=./exports
+# Enable scheduled notifications (true/false)
+NOTIFICATIONS_ENABLED=true
 
-# Maximum export file size in MB (default: 50)
-MAX_EXPORT_SIZE=50
+# Notification check interval in minutes
+NOTIFICATION_CHECK_INTERVAL=60
 
-# Automatic backup schedule (cron format, empty to disable)
-BACKUP_SCHEDULE=0 3 * * 1
+# Maximum notifications per day per domain
+MAX_NOTIFICATIONS_PER_DAY=5
 
-# Number of backup files to keep (default: 7)
-BACKUP_RETENTION=7
+# Email template directory
+EMAIL_TEMPLATE_DIR=./server/templates
 
-# ===========================
-# Logging Configuration
-# ===========================
+# =================================================================
+# EXPORT CONFIGURATION
+# =================================================================
 
-# Log level (error/warn/info/debug)
+# Maximum export records limit
+MAX_EXPORT_RECORDS=10000
+
+# Export file cleanup interval in hours
+EXPORT_CLEANUP_INTERVAL=24
+
+# Export temporary directory
+EXPORT_TEMP_DIR=./temp/exports
+
+# =================================================================
+# LOGGING CONFIGURATION
+# =================================================================
+
+# Log level: error, warn, info, debug
 LOG_LEVEL=info
 
-# Log file path (empty to disable file logging)
+# Log file path
 LOG_FILE=./logs/dommate.log
 
-# Maximum log file size in MB (default: 10)
+# Enable console logging (true/false)
+LOG_CONSOLE=true
+
+# Log rotation: daily, weekly, monthly
+LOG_ROTATION=daily
+
+# Maximum log file size in MB
 LOG_MAX_SIZE=10
 
-# Number of log files to keep (default: 5)
-LOG_MAX_FILES=5
+# Maximum number of log files to keep
+LOG_MAX_FILES=30
 
-# ===========================
-# Rate Limiting Configuration
-# ===========================
+# =================================================================
+# RATE LIMITING
+# =================================================================
 
-# API rate limit per IP (requests per minute, default: 100)
-API_RATE_LIMIT=100
+# API rate limit requests per window
+RATE_LIMIT_REQUESTS=100
 
-# Login rate limit per IP (attempts per minute, default: 5)
-LOGIN_RATE_LIMIT=5
+# API rate limit window in minutes
+RATE_LIMIT_WINDOW=15
 
-# Export rate limit per user (exports per hour, default: 10)
-EXPORT_RATE_LIMIT=10
+# Enable rate limiting (true/false)
+RATE_LIMIT_ENABLED=true
 
-# ===========================
-# Third-party API Configuration
-# ===========================
+# =================================================================
+# CORS CONFIGURATION
+# =================================================================
 
-# WHOIS API provider (optional, for enhanced WHOIS data)
-# WHOIS_API_KEY=your-whois-api-key
-# WHOIS_API_PROVIDER=whoisxml
+# Allowed origins for CORS (comma-separated URLs)
+CORS_ORIGINS=http://localhost:4322,https://dommate.com
 
-# DNS resolver servers (comma-separated, optional)
-# DNS_SERVERS=8.8.8.8,1.1.1.1
+# Enable CORS credentials (true/false)
+CORS_CREDENTIALS=true
 
-# ===========================
-# Development Configuration
-# ===========================
+# =================================================================
+# BACKUP CONFIGURATION
+# =================================================================
 
-# Enable development mode features (true/false)
-DEVELOPMENT_MODE=false
+# Enable automatic database backups (true/false)  
+BACKUP_ENABLED=true
 
-# Enable debug logging (true/false)
+# Backup interval in hours
+BACKUP_INTERVAL=24
+
+# Maximum number of backup files to keep
+BACKUP_MAX_FILES=30
+
+# Backup compression (true/false)
+BACKUP_COMPRESSION=true
+
+# =================================================================
+# PERFORMANCE CONFIGURATION
+# =================================================================
+
+# Maximum request body size in MB
+MAX_REQUEST_SIZE=10
+
+# Request timeout in milliseconds
+REQUEST_TIMEOUT=30000
+
+# Enable gzip compression (true/false)
+ENABLE_COMPRESSION=true
+
+# =================================================================
+# DEVELOPMENT CONFIGURATION
+# =================================================================
+
+# Enable debug mode (true/false)
 DEBUG_MODE=false
 
-# Allow CORS from all origins in development (true/false)
-CORS_ALLOW_ALL=false
+# Enable API documentation endpoint (true/false)
+ENABLE_API_DOCS=false
 
-# Frontend URL for CORS (in production)
-FRONTEND_URL=http://localhost:4322
+# Enable development middleware (true/false)
+ENABLE_DEV_MIDDLEWARE=false
 
-# ===========================
-# Container Configuration (Docker)
-# ===========================
+# =================================================================
+# DOCKER CONFIGURATION
+# =================================================================
 
-# Container timezone (default: UTC)
-TZ=UTC
+# Docker container name prefix
+DOCKER_CONTAINER_PREFIX=dommate
 
-# User ID for container (default: 1000)
-PUID=1000
+# Docker network name
+DOCKER_NETWORK=dommate-network
 
-# Group ID for container (default: 1000)
-PGID=1000
+# Data volume mount path inside container
+DATA_VOLUME_PATH=/app/data
 
-# ===========================
-# Advanced Configuration
-# ===========================
+# =================================================================
+# MONITORING CONFIGURATION
+# =================================================================
 
-# Enable clustering for multiple CPU cores (true/false)
-CLUSTER_MODE=false
+# Enable health check endpoint (true/false)
+ENABLE_HEALTH_CHECK=true
 
-# Number of worker processes (0 = auto-detect CPU cores)
-WORKER_COUNT=0
+# Health check endpoint path
+HEALTH_CHECK_PATH=/health
 
-# Memory limit for the application in MB (0 = unlimited)
-MEMORY_LIMIT=0
+# Enable metrics collection (true/false)
+ENABLE_METRICS=false
 
-# Enable performance monitoring (true/false)
-PERFORMANCE_MONITORING=false 
+# Metrics endpoint path
+METRICS_PATH=/metrics 
