--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
+    "build:strict": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "check": "astro check",
