🔧 修复 astro 命令找不到的问题
- 修复 GitHub Actions 中 astro command not found 错误
- 更新工作流使用 npm run build 而不是直接的 astro 命令
- 修复 Dockerfile 中的相同问题
- 更新测试脚本使用正确的构建命令
- 添加第三层备用构建机制
- 创建详细的修复文档

这确保了在所有环境 (本地、Docker、CI) 中都能正确构建项目

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -66,13 +66,21 @@ jobs:
       - name: Build frontend (attempt 1)
         id: build-attempt-1
         continue-on-error: true
-        run: astro check && astro build
+        run: npm run build:check && npm run build
 
       - name: Build frontend (attempt 2 - skip type checking)
         if: steps.build-attempt-1.outcome == 'failure'
         run: |
           echo "Type checking failed, building without strict checks..."
-          astro build
+          npm run build
+
+      - name: Build frontend (attempt 3 - rollup fix)
+        if: steps.build-attempt-1.outcome == 'failure'
+        run: |
+          echo "Build failed, attempting rollup fix..."
+          rm -rf node_modules/@rollup/
+          npm install @rollup/rollup-linux-x64-gnu --optional --legacy-peer-deps
+          npm run build
 
   # Build Docker image
   build:
