--- a/.dockerignore
+++ b/.dockerignore
@@ -8,7 +8,10 @@ pnpm-debug.log*
 # Environment files
 .env*
 !.env.example
-env.*
+env.local
+env.production
+env.development
+env.test
 
 # Development files
 .git/
