🔧 修复 Alpine Linux Rollup 模块兼容性问题
核心修复：
- 添加缺失的 build:check 脚本到 package.json
- 修复 Dockerfile 使用正确的 musl 版本 rollup 模块
- 增加第四层完全重装备用方案
- 针对 Alpine Linux (musl) 环境优化构建流程
- 保持 GitHub Actions (glibc) 环境兼容性

技术改进：
- 四层渐进式构建策略确保构建成功
- 更彻底的模块清理和重装机制
- 清晰的错误日志和状态报告
- 跨平台 libc 兼容性支持

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "build:check": "astro check",
     "build:strict": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
