🔧 修复 GitHub Container Registry 镜像名称大小写问题
- 修复 SBOM action 因镜像名称大小写导致的失败
- 将 IMAGE_NAME 从 github.repository 改为 github.repository_owner/dommate
- 确保镜像名称符合 GitHub Container Registry 小写要求
- 解决 yeagoo/DomMate vs yeagoo/dommate 的命名不一致问题
- 添加详细的修复文档和最佳实践指南

这是第六阶段修复：GitHub Container Registry 镜像名称规范化

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,7 @@ on:
 # Environment variables
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/dommate
 
 jobs:
   # Build and test the application
